[gd_scene load_steps=19 format=3 uid="uid://c32yhj13jsian"]

[ext_resource type="Script" uid="uid://cdndqdrtenq82" path="res://scripts/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://dyq4cv5bjpjcx" path="res://assets/sprite/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Idle.png" id="1_xo3ru"]
[ext_resource type="Texture2D" uid="uid://csodtgn0xbajs" path="res://assets/sprite/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Run.png" id="3_fvtld"]
[ext_resource type="Texture2D" uid="uid://esju4j23w1b4" path="res://assets/sprite/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Jump.png" id="4_ct4mp"]
[ext_resource type="Texture2D" uid="uid://bbmd054r7g607" path="res://assets/sprite/FreeKnight_v1/Colour1/Outline/120x80_PNGSheets/_Fall.png" id="5_s4jxa"]
[ext_resource type="Script" uid="uid://cvtxspic740mj" path="res://scripts/fsm/final_state_machine.gd" id="6_hp4bs"]
[ext_resource type="Script" uid="uid://f78wolkyq62t" path="res://scripts/fsm/idle_state.gd" id="7_hp4bs"]
[ext_resource type="Script" uid="uid://bs67fgygpr7da" path="res://scripts/fsm/run_state.gd" id="8_g2vtq"]
[ext_resource type="Script" uid="uid://dpy822t13put7" path="res://scripts/fsm/jump_state.gd" id="9_ihjo1"]
[ext_resource type="Script" uid="uid://cwffmabyjalxr" path="res://scripts/fsm/fall_state.gd" id="10_dk1vr"]
[ext_resource type="Script" uid="uid://b7jsec7itjjdy" path="res://scripts/fsm/double_jump_state.gd" id="11_ihjo1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 7.0
height = 38.0

[sub_resource type="Animation" id="Animation_s4jxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xo3ru")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g2vtq"]
resource_name = "fall"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_s4jxa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ct4mp"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xo3ru")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_hp4bs"]
resource_name = "jump"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ct4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_oh5ij"]
resource_name = "run"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fvtld")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hp4bs"]
_data = {
&"RESET": SubResource("Animation_s4jxa"),
&"fall": SubResource("Animation_g2vtq"),
&"idle": SubResource("Animation_ct4mp"),
&"jump": SubResource("Animation_hp4bs"),
&"run": SubResource("Animation_oh5ij")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_hjaqi")
Speed = 200.0
jump_speed = 300.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6, -40)
texture = ExtResource("1_xo3ru")
hframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -19)
shape = SubResource("CapsuleShape2D_hjaqi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hp4bs")
}
autoplay = "idle"

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("init_state")]
script = ExtResource("6_hp4bs")
init_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://cvtxspic740mj"

[node name="IdleState" type="Node" parent="FSM"]
script = ExtResource("7_hp4bs")
metadata/_custom_type_script = "uid://d1dpk36pngvbc"

[node name="RunState" type="Node" parent="FSM"]
script = ExtResource("8_g2vtq")
metadata/_custom_type_script = "uid://d1dpk36pngvbc"

[node name="JumpState" type="Node" parent="FSM"]
script = ExtResource("9_ihjo1")
metadata/_custom_type_script = "uid://d1dpk36pngvbc"

[node name="FallState" type="Node" parent="FSM"]
script = ExtResource("10_dk1vr")
metadata/_custom_type_script = "uid://d1dpk36pngvbc"

[node name="DoubleJumpState" type="Node" parent="FSM"]
script = ExtResource("11_ihjo1")
metadata/_custom_type_script = "uid://d1dpk36pngvbc"
